[package]
name = "otoroshi_rust_types"
version = "1.0.0"
edition = "2021"
authors = ["Zwiterrion <etienne.anne@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI to create and build WASM binaries"
readme = "README.md"
homepage = "https://github.com/MAIF/otoroshi-rust-types"
repository = "https://github.com/MAIF/otoroshi-rust-types"
keywords = ["types"]
categories = ["command-line-utilities"]

[dependencies]
extism-pdk = "1.1.0"
serde = "1.0.152"
serde_json = "1.0.91"
base64 = "0.22.0"
